fix height on mobile devices problem

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,14 @@
-#root{
-  height: 100%;
+#root {
   width: 100%;
-  overflow: hidden;
+}
+
+html, body {
+    position: fixed;
+    top: 0; 
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0;
+    padding: 0;
+    height: 100%;
 }
